# bagof-repo-template

./: README.md  pyproject.toml  zensical.toml
.github/workflows/: lint.yaml  publish-on-release.yaml  publish-pypi.yaml  test-and-publish.yaml  test-matrix.yaml  test-on-push.yaml  test.yaml
docs/: requirements.txt
docs/stylesheets/: extra.css
src/bagof/submodule_name/: __init__.py
tests/: test_import.py
