[project]
name = "bagof-submodule_name"
description = "Template package for bagof.submodule_name"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[build-system]
requires = [
    "setuptools>=78.1.1",
    "wheel>=0.46.2",
    "versioningit>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bagof*"]
namespaces = true

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
default-tag = "0.1"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/bagof/submodule_name/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "UP", "W"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "UP006",
]

[tool.codespell]
check-filenames = true
skip = ".git,*.egg-info,build,dist,*.pdf,*.svg"
